--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -71,6 +71,8 @@
   transition: 0.5s ease-out;
   overflow: visible;
   margin-left: 50px;
+  display: inline-block;
+  text-align: center;
   
  }
  
@@ -308,8 +310,8 @@ input[type="submit"]:hover {
   text-decoration: none;
   display: inline-block;
   font-size: 10px;
-  margin-left: 55px;
-  margin-top: 0px;
+  margin-left: 40px;
+  margin-bottom: 12px;
   cursor: pointer;
   border-radius: 10px;
 }
@@ -327,6 +329,8 @@ border: none;
   display: inline-block;
 }
 
-
-
-
+.IncorrectPassText{
+  text-align: center;
+  align-items: center;
+  color: red;
+}
