--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -57,6 +57,11 @@
     cursor:pointer;
     color: white;
   }
+
+  .alignNavbarBtn{
+    display: inline-block;
+  }
+  
 /* NavButton----------------------------------- */
 
 /* Card Status -------------------------------- */
@@ -171,10 +176,6 @@ tr:hover {background-color: #D6EEEE;}
   text-align: center;
 }
 
-/* .ToprowFont{
-  font-size: 20px;
-  font-weight: 300;
-} */
 /* Table -------------------------------------- */
 
 
@@ -229,7 +230,7 @@ input[type="text"], input[type="password"] {
 input[type="submit"] {
   width: 100%;
   background-color: #333;
-  color: white;
+  background-color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -256,10 +257,16 @@ input[type="submit"]:hover {
 .loginBtn{
   width: 300px;
   height: 50px;
-  background-color: #494343;
+  background-color: #0077ff;;
   border-color: transparent;
   color: white;
   font-style: normal;
+}
+
+.IncorrectPassText{
+  text-align: center;
+  align-items: center;
+  color: red;
 }
 /* LoginPage-------------------------------------- */
 
@@ -317,28 +324,117 @@ input[type="submit"]:hover {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 10px;
-  margin-left: 40px;
-  margin-bottom: 12px;
+  font-size: 12px;
+  width: 80px;
+  height: 50px;
+
   cursor: pointer;
   border-radius: 10px;
+
+  position: absolute;
+  bottom: 100px;
+  right: 95px;
 }
+
+
 /* Logout Button----------------------------------- */
 
-.notificationBtn{
-margin-left: 1200px;
-height: 20px;
-width: 30px;
-background-color: transparent;
-border: none;
+
+/* Loadig---------------- */
+svg {
+  width: 150px;
+  transform-origin: center;
+  animation: rotate4 2s linear infinite;
+ }
+ 
+ circle {
+  fill: none;
+  stroke: hsl(214, 97%, 59%);
+  stroke-width: 2;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  animation: dash4 1.5s ease-in-out infinite;
+  
+ }
+ 
+ @keyframes rotate4 {
+  100% {
+   transform: rotate(360deg);
+  }
+ }
+ 
+ @keyframes dash4 {
+  0% {
+   stroke-dasharray: 1, 200;
+   stroke-dashoffset: 0;
+  }
+ 
+  50% {
+   stroke-dasharray: 90, 200;
+   stroke-dashoffset: -35px;
+  }
+ 
+  100% {
+   stroke-dashoffset: -125px;
+  }
+ }
+
+ .loadingCenter {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+ 
+/* Loadig---------------- */
+
+/* Notification ------------- */
+
+.notification {
+  position: unset;
+  display:inline-block;
+  font-size: large;
+  width: 5px;
+  height: 5px;
+
 }
 
-.alignNavbarBtn{
-  display: inline-block;
+.notification-header {
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.IncorrectPassText{
-  text-align: center;
-  align-items: center;
-  color: red;
+.notification-dropdown {
+  position: absolute;
+  /* top: 100%; */
+  right: 0px;
+  z-index: 1;
+  display: none;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  font-size:medium;
 }
+
+.notification-dropdown ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 10px;
+}
+
+.notification-dropdown li {
+  padding: 5px;
+  cursor: pointer;
+}
+
+.notification:hover .notification-dropdown {
+  display: block;
+}
+
+.notification-position {
+  position: absolute;
+  top: 20px;
+  right: 70px;
+}
+/* Notification ------------- */
