--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,13 +1,24 @@
 .Equipment{
-    width: 200px;
-    height: 100px;
+    width: var(--widthEquipment);
+    height: var(--heightEquipment);
     border-radius: 20px;
-    background: #f5f5f5;
+    background: var(--bgColorEquipment);
+    left: var(--leftPositionEquipment);
     position: relative;
     padding: 1.8rem;
     border: 2px solid #c3c6ce;
     transition: 0.5s ease-out;
     overflow: visible;
+}
+.EquipTitle{
+    color: black;
+    top: 50%;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -50px 0 0 -50px;
 }
 .EquipmentClose {
     cursor: pointer;
