--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -76,6 +76,7 @@
   transition: 0.5s ease-out;
   overflow: visible;
   margin-left: 20px;
+  margin-top: 10px;
   display: inline-block;
   text-align: center;
  }
@@ -434,7 +435,7 @@ svg {
 
 .notification-position {
   position: absolute;
-  top: 20px;
+  top: 30px;
   right: 70px;
 }
 
@@ -446,6 +447,14 @@ svg {
   border-radius: 50%;
   background: red;
   color: white;
-  font-size: medium;
+  font-size: small;
+}
+
+.notifBtn{
+  background-color: transparent;
+  border: transparent;
+  height: 50px;
+  right: 40px;
 }
 /* Notification ------------- */
+
