--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -55,8 +55,8 @@
     position: absolute;
     z-index: 1;
     border:3px solid black;
-    bottom: 100%;
-    left: 50%;
+    bottom: -100px;
+    left: 17%;
     margin-left: -60px;
     background-color:white;
     opacity: 0;
