--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -200,3 +200,33 @@
     to {bottom: 0; opacity: 0;}
   }
     /* --TOAST MESSAGE-- */
+
+    /* --MENU-- */
+    .main-menu ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      display: flex;
+    }
+    
+    .main-menu ul li a {
+      padding: 20px;
+      display: block;
+      color: #ddd;
+      text-decoration: none;
+      background: #21263E;
+    }
+    
+    .main-menu ul li ul {
+      display: none;
+    }
+    
+    .main-menu ul li:hover ul {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .main-menu ul li:hover a {
+      color: #fff;
+    }
+    /* --MENU-- */
