--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -6,7 +6,7 @@
     z-index: 1;
     top: 1;
     left: 0;
-    background-color: orange;
+    background-color: var(--bgcolorNav);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -47,7 +47,7 @@
 
 
 /* NavbarColor ------------------------------- */
-.ClassNavbarcolor1 {background-color: orange;}
+.ClassNavbarcolor1 {background-color: var(--bgcolorNav);}
 /* NavbarColor ------------------------------- */
 
 
@@ -105,7 +105,7 @@
   transform: translate(-50%, 10%);
   border-radius: 9px;
   border: none;
-  background-color: #008bf8;
+  background-color: var(--bgCardBtn);
   color: #fff;
   font-size: 10PX;
   padding: 20px;
@@ -129,7 +129,7 @@
  
  /*Hover*/
  .card:hover {
-  border-color: #008bf8;
+  border-color: var(--bgCardBtn);
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
  }
  
@@ -273,7 +273,7 @@ input[type="submit"]:hover {
 
 /* View Equipment ID Button-------------------------------------- */
 .ViewEquipIDBtn {
-  --color: #0077ff;
+  --color: var(--bgEquipmentBtn);;
   font-family: inherit;
   display: inline-block;
   width: 40px;
