--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -458,3 +458,58 @@ svg {
 }
 /* Notification ------------- */
 
+/* Settings ----------------- */
+.Formcard {
+  width: 350px;
+  height: 120px;
+  border-radius: 20px;
+  background: whitesmoke;
+  position: relative;
+  padding: 1.8rem;
+  border: 2px solid var(--bgcolorCard);
+  transition: 0.5s ease-out;
+  overflow: visible;
+  margin-left: 20px;
+  margin-top: 10px;
+ align-items: center;
+ text-align: center;
+ position: fixed;
+ top: 60%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ }
+ .Settingsdropdown{
+  width: 150px;
+  height: 27px;
+  border-radius: 20px;
+ }
+ .Settingsdropdown-dropdown {
+  position: absolute;
+  /* top: 100%; */
+  right: 0px;
+  z-index: 1;
+  display: none;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  font-size:medium;
+}
+
+.FormSettingsCard{
+  display: inline-block;
+  position: fixed;
+  top: 36%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+}
+
+.FormSettingsButton{
+  display: inline-block;
+  position: fixed;
+  top: 36%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+}
+ /* Settings ----------------- */
+
+
