--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -93,16 +93,16 @@
   }
   
   /* The Close Button */
-  .close {
-    color: red;
+  .equipmentMenu {
+    color: black;
     float: right;
     font-size: 28px;
     font-weight: bold;
   }
   
-  .close:hover,
-  .close:focus {
-    color: #000;
+  .equipmentMenu:hover,
+  .equipmentMenu:focus {
+    color: gray;
     text-decoration: none;
     cursor: pointer;
   }
