--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -2,11 +2,11 @@
     width: var(--widthEquipment);
     height: var(--heightEquipment);
     border-radius: 20px;
-    background: var(--bgColorEquipment);
+    background: white;
     left: var(--leftPositionEquipment);
     position: relative;
     padding: 1.8rem;
-    border: 2px solid #c3c6ce;
+    border: 2px solid var(--bgColorEquipment);
     transition: 0.5s ease-out;
     overflow: visible;
 }
@@ -93,8 +93,22 @@
   }
   
   /* The Close Button */
-  .equipmentMenu {
+  .close {
+    color: red;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
     color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .equipmentMenu {
+    color: gray;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -102,7 +116,7 @@
   
   .equipmentMenu:hover,
   .equipmentMenu:focus {
-    color: gray;
+    color: red;
     text-decoration: none;
     cursor: pointer;
   }
