--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -9,6 +9,7 @@
     border: 2px solid var(--bgColorEquipment);
     transition: 0.5s ease-out;
     overflow: visible;
+    display: inline-block;
 }
 .EquipTitle{
     color: black;
