--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,6 +1,6 @@
 /* MAIN STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-:root {
+/* :root {
   --level-1: #8dccad;
   --level-2: #f5cc7f;
   --level-3: #7b9fe0;
@@ -24,12 +24,12 @@ ol {
   position: relative;
   padding: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-}
+} */
 
 /*Level Styles Start*/
 /* LEVEL-1 STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.level-1 {
+/* .level-1 {
   width: 50%;
   margin: 0 auto 40px;
   background: var(--level-1);
@@ -44,11 +44,11 @@ ol {
   width: 2px;
   height: 20px;
   background: var(--black);
-}
+} */
 
 /* LEVEL-2 STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.level-2-wrapper {
+/* .level-2-wrapper {
   position: relative;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -113,11 +113,11 @@ ol {
   width: 20px;
   height: 2px;
   background: var(--black);
-}
+} */
 
 /* LEVEL-3 STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.level-3-wrapper {
+/* .level-3-wrapper {
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -148,11 +148,11 @@ ol {
 .level-3 {
   margin-bottom: 20px;
   background: var(--level-3);
-}
+} */
 
 /* LEVEL-4 STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.level-4-wrapper {
+/* .level-4-wrapper {
   position: relative;
   width: 80%;
   margin-left: auto;
@@ -224,8 +224,8 @@ ol {
   .level-2-wrapper > li:not(:first-child) {
     margin-top: 50px;
   }
-}
-/*Level Styles End*/
+} */
+/*Level Styles End */
 
 
 /*Equipment Box*/
@@ -234,7 +234,8 @@ ol {
     height: var(--heightEquipment);
     border-radius: 20px;
     background: white;
-    left: var(--leftPositionEquipment);
+    /* left: var(--leftPositionEquipment); */
+    margin: 10px 10px 10px 10px;
     position: relative;
     padding: 1.8rem;
     padding: 20px 5px 0 5px;
