--- a/src/Styles/MainCSS.css
+++ b/src/Styles/MainCSS.css
@@ -47,7 +47,11 @@
 
 
 /* NavbarColor ------------------------------- */
-.ClassNavbarcolor1 {background-color: var(--bgcolorNav);}
+.ClassNavbarcolor1 {
+  background-color: var(--bgcolorNav);
+  width: 108%
+}
+
 /* NavbarColor ------------------------------- */
 
 
