--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,251 +1,80 @@
-/* MAIN STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* :root {
-  --level-1: #8dccad;
-  --level-2: #f5cc7f;
-  --level-3: #7b9fe0;
-  --level-4: #f27c8d;
-  --black: black;
-}
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-ol {
-  list-style: none;
-}
-.container {
-  max-width: 1000px;
-  padding: 0 10px;
-  margin: 0 auto;
-}
-.rectangle {
-  position: relative;
-  padding: 20px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-} */
-
-/*Level Styles Start*/
-/* LEVEL-1 STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* .level-1 {
-  width: 50%;
-  margin: 0 auto 40px;
-  background: var(--level-1);
-}
-.level-1::before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 2px;
-  height: 20px;
-  background: var(--black);
-} */
-
-/* LEVEL-2 STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* .level-2-wrapper {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-.level-2-wrapper::before {
-  content: "";
-  position: absolute;
-  top: -20px;
-  left: 12.5%;
-  width: 75%;
-  height: 2px;
-  background: var(--black);
-}
-.level-2-wrapper::after {
-  display: none;
-  content: "";
-  position: absolute;
-  left: -20px;
-  bottom: -20px;
-  width: calc(100% + 20px);
-  height: 2px;
-  background: var(--black);
-}
-.level-2-wrapper li {
-  position: relative;
-}
-.level-2-wrapper > li::before {
-  content: "";
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 2px;
-  height: 20px;
-  background: var(--black);
-}
-.level-2 {
-  width: 70%;
-  margin: 0 auto 40px;
-  background: var(--level-2);
-}
-.level-2::before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 2px;
-  height: 20px;
-  background: var(--black);
-}
-.level-2::after {
-  display: none;
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 0%;
-  -webkit-transform: translate(-100%, -50%);
-          transform: translate(-100%, -50%);
-  width: 20px;
-  height: 2px;
-  background: var(--black);
-} */
-
-/* LEVEL-3 STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* .level-3-wrapper {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 20px;
-  width: 90%;
-  margin: 0 auto;
-}
-.level-3-wrapper::before {
-  content: "";
-  position: absolute;
-  top: -20px;
-  left: calc(25% - 5px);
-  width: calc(50% + 10px);
-  height: 2px;
-  background: var(--black);
-}
-.level-3-wrapper > li::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translate(-50%, -100%);
-          transform: translate(-50%, -100%);
-  width: 2px;
-  height: 20px;
-  background: var(--black);
-}
-.level-3 {
-  margin-bottom: 20px;
-  background: var(--level-3);
-} */
-
-/* LEVEL-4 STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* .level-4-wrapper {
-  position: relative;
-  width: 80%;
-  margin-left: auto;
-}
-.level-4-wrapper::before {
-  content: "";
-  position: absolute;
-  top: -20px;
-  left: -20px;
-  width: 2px;
-  height: calc(100% + 20px);
-  background: var(--black);
-}
-.level-4-wrapper li + li {
-  margin-top: 20px;
-}
-.level-4 {
-  font-weight: normal;
-  background: var(--level-4);
-}
-.level-4::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 0%;
-  -webkit-transform: translate(-100%, -50%);
-          transform: translate(-100%, -50%);
-  width: 20px;
-  height: 2px;
-  background: var(--black);
+.MainDiv{
+  display: inline-flex;
+  flex-wrap:wrap;
+  flex-direction: row;
 }
 
-@media screen and (max-width: 700px) {    
-  .rectangle {
-    padding: 20px 10px;
-  }
-  
-  .level-1,
-  .level-2 {
-    width: 100%;
-  }
-  
-  .level-1 {
-    margin-bottom: 20px;
-  }
-  
-  .level-1::before,
-  .level-2-wrapper > li::before {
-    display: none;
-  }
-  
-  .level-2-wrapper,
-  .level-2-wrapper::after,
-  .level-2::after {
-    display: block;
-  }
-  
-  .level-2-wrapper {
-    width: 90%;
-    margin-left: 10%;
-  }
-  
-  .level-2-wrapper::before {
-    left: -20px;
-    width: 2px;
-    height: calc(100% + 40px);
-  }
-  
-  .level-2-wrapper > li:not(:first-child) {
-    margin-top: 50px;
-  }
-} */
-/*Level Styles End */
-
-
+.row { 
+  display: flex; /* establish flex container */ 
+  height: auto; /* height from original code */ 
+  width: 1024px; /* width from original code */ 
+} 
+.row > div:first-child { 
+  flex: 0 0 80%; /* width from original code */ 
+  display: flex; 
+  flex-direction: column; /* stack first div children vertically */ 
+} 
+.row > div:first-child > div { 
+  flex: 1; /* items in first div distribute space equally */ 
+  border: 1px dashed black; 
+} 
+.row > div:last-child 
+{ 
+  flex: 0 0 20%; border: 1px dashed black; 
+}
+.MainDiv{
+  height: auto;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
 /*Equipment Box*/
 .Equipment{
     width: var(--widthEquipment);
     height: var(--heightEquipment);
     border-radius: 20px;
     background: white;
-    /* left: var(--leftPositionEquipment); */
+    left: var(--leftPositionEquipment);
+    top: var(--topPositionEquipment);
+    border: var(--bgColorEquipment);
+    opacity: var(--opacityEquipment);
+
     margin: 10px 10px 10px 10px;
-    position: relative;
+    position: absolute;    
     padding: 1.8rem;
     padding: 20px 5px 0 5px;
-    border: var(--bgColorEquipment);
     transition: 0.5s ease-out;
     overflow: visible;
     display: flex;
-    float: left;
+  
+    /* display: inline-block;
+    clear: left; */
+    /* flex-wrap: wrap;
+    flex-direction: row; */
+    /* float: left; */
 }
+.MainDiv{
+  width: auto;
+  height: auto;
+  border-radius: 20px;
+  background: white;
+  left: var(--leftPositionEquipment);
+  top: var(--topPositionEquipment);
+  border: var(--bgColorEquipment);
 
+  margin: 10px 10px 10px 10px;
+  position: absolute;    
+  padding: 1.8rem;
+  padding: 20px 5px 0 5px;
+  transition: 0.5s ease-out;
+  overflow: visible;
+  display: flex;
+
+  /* display: inline-block;
+  clear: left; */
+  /* flex-wrap: wrap;
+  flex-direction: row; */
+  /* float: left; */
+}
 /* .Equipment::before,.Equipment::after{
   content: '';
   position: absolute;
@@ -298,6 +127,7 @@ ol {
     width: 310px;
     color: black;
     text-align: center;
+    background-color: white;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
